# engineering-skills-assistant

./: README.md  eng-bot.service  pyproject.toml  requirements.txt
app/: __main__.py  config.py
app/api/: __init__.py  routes.py  schemas.py
app/integration/: chatgpt.py
app/services/: chat.py  conversation_store.py  route_processing.py
app/telegram/: bot.py  handlers.py  registry.py  utils.py
